# meda

./: README.md  peft_medgemma_4b_it_nih_cxr_pneumonia.ipynb  pyproject.toml  requirements.txt  requirements_wsi.txt
notebooks/: peft_medgemma_4b_it_brain_mri.ipynb  peft_medgemma_4b_it_nct_crc_he.ipynb  peft_medgemma_4b_it_nih_cxr_pneumonia.ipynb
src/: evaluate_medgemma_49_it_nih_pneumonia_chest_x_ray.py  evaluate_medgemma_4b_it_brain_mri.py  evaluate_medgemma_4b_it_nct_crc_he.py  evaluate_medgemma_4b_it_nih_pneumonia_chest_x_ray.py  peft_medgemma_4b_it_brain_mri.py  peft_medgemma_4b_it_nct_crc_he.py  peft_medgemma_4b_it_nih_cxr_pneumonia.ipynb  peft_medgemma_4b_it_nih_nct_crc_he.py  peft_medgemma_4b_it_nih_pneumonia_chest_x_ray.py  peft_medgemma_nih_pneumonia_chest_x_ray.py  test_medgemma_49_it_nct_crc_he.py  test_medgemma_49_it_nih_pneumonia_chest_x_ray.py  test_medgemma_4b_it_brain_mri.py
src/config/: config_medgemma_4b_it_brain_mri.py  config_medgemma_4b_it_nct_crc_he.py  config_medgemma_4b_it_nih_cxr.py
src/utils/: data_utils.py  fetch_data.py  model_utils.py  prompt_utils.py
src/wsi/: abmil.py  config_wsi.py  embed_patch.py  evaluation.py  inference.py  make_bags_dataset.py  prepare_patches.py  prepare_wilds_dataset.py  prepare_wilds_patches.py  spatialABMIL.py  train_abmil.py  visualize_top_patches.py  wsi_utils.py
