# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meda"
version = "0.1.0"
description = "Madical Assistant Project package"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "VGBonds" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]


